@@ -7,7 +7,8 @@ Ctrlproxy 3.0.6 UNRELEASED
 
     * Add report-time-offset setting.
 	
-	* New settings ``port'', ``linestack'', ``logging'', ``password''.
+	* New settings ``port'', ``linestack'', ``logging'', ``password'',
+	  ``default-network''.
 
   BUG FIXES
 
